# silo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  example.docker.env  example.env
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: slidesbar.module.css  slidesbar.tsx  userbar.module.css  userbar.tsx
client/app/presentation/[presentation]/: page.module.css  page.tsx
migrations/: 20230507205528_init.up.sql
server/: .dockerignore  Cargo.toml  Dockerfile
server/migrations/: 20230509232244_init.down.sql  20230509232244_init.up.sql
server/src/: auth.rs  config.rs  handlers.rs  main.rs  model.rs  models.rs  routes.rs  schema.rs  sql.rs
server/src/db/: mod.rs  models.rs  sql.rs
server/src/handlers/: auth.rs  mod.rs  slides.rs
server/src/middleware/: authorize.rs  mod.rs  validate.rs
server/src/utils/: jwt.rs  mod.rs
