[package]
name = "silo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
